--- a/src/App.css
+++ b/src/App.css
@@ -51,8 +51,9 @@ h1,h2,h3,h4,h5,h6
     position: fixed;
     z-index: 10000;
     top: 0;
-    width: 90vw;
-    margin: auto;
+    width: 80vw;
+    left: 50%;
+    transform: translate(-50%,0);
     margin-top: -40px;
     display: flex;
     flex-direction: row;
