--- a/src/App.css
+++ b/src/App.css
@@ -66,7 +66,7 @@ h1,h2,h3,h4,h5,h6
 {
     font-family: "Javatext", serif;
     font-size: 64px;
-    color: #FFAC6D;
+    color: #FF7D1A;
     display: inline;
 }
 
